--- a/html/index.html
+++ b/html/index.html
@@ -5,32 +5,37 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="/styles/main.css" />
+	<link rel="stylesheet" href="../styles/main.css" />
 	<title>Promo</title>
 </head>
+
 <body>
 	<div class="main-promo">
 
 		<div class="block-content-1">
 			<div class="block-content-1__block-left-content">
-				<img class="block-content-1__logo" src="/images/logo.svg" alt="">
+				<img class="block-content-1__logo" src="../images/logo.png" alt="">
 				<h3 class="block-content-1__header">КАПСУЛЫ В ПОДАРОК*</h3>
 				<div class="block-content-1__second-block">
 					<p class="block-content-1__first-p">Проведите время
 						с комфортом,
 						а посуду доверьте Electrolux и Fairy</p>
 					<div class="block-content-1__img-fairy-wrapper">
-						<img class="block-content-1__img-fairy" src="/images/fairy.png" alt="">
-						<p class="block-content-1__firts-p">120 капсул</p>
+						<img class="block-content-1__img-fairy" src="../images/fairy.png" alt="">
+						<p class="block-content-1__third-p">120 капсул</p>
 					</div>
+					<p class="block-content-1__first-p-responsive">Проведите время
+						с комфортом,
+						а посуду доверьте Electrolux и Fairy</p>
 				</div>
 				<div class="block-content-1__third-block">
-					<button class="block-content-1__button">Купить</button>
-					<p class="block-content-1__second-p">С 1 по 31 декабря</p>
+					<a href="" class="block-content-1__button">Купить</a>
+					<p class="block-content-1__second-p">С 1 ноября по 31 декабря</p>
 					<p class="block-content-1__third-p">Сушите гигиенично - сушите с AirDry**</p>
 				</div>
 			</div>
 			<div class="block-content-1__block-right-contet-img"></div>
+			<div class="block-content-1__block-right-contet-img-responsive"></div>
 		</div>
 		
 		<div class="block-content-2">
@@ -76,7 +81,8 @@
 				</div>
 				<div class="block-content-3__item center">
 					<div class="block-content-3__wrapper-text-block-center">
-						<h3 class="block-content-3__header-center block-content-3__header-center_margin-top">ExtraHugiene</h3>
+						<h3 class="block-content-3__header-center block-content-3__header-center_margin-top">
+							ExtraHugiene</h3>
 						<p class="block-content-3__text-center">Функция ExtraHygiene удаляет бактерии и микроорганизмы,
 							обеспечивая превосходную дезинфекцию вашей посуды.
 						</p>
@@ -110,13 +116,16 @@
 		<div class="block-content-4">
 			<div class="block-content-4__text-block">
 				<p class="block-content-4__first-text">
-					*Автоматическое открывание двери после цикла мойки предотвращает образования плесени благодаря снижению
+					*Автоматическое открывание двери после цикла мойки предотвращает образования плесени благодаря
+					снижению
 					уровня влажности внутри моечной камеры. <br>
-					На основании материалов, опубликованных в научном издании Fungal Biology (том 15, выпуск 10, 2011 год).
+					На основании материалов, опубликованных в научном издании Fungal Biology (том 15, выпуск 10, 2011
+					год).
 				</p>
+				<span>Подробнее:</span><a class="block-content-4__second-text"
+					href="https://www.researchgate.net/publication/51671322_Dishwashers-a_man-made_ecological_niche_accommodating_human_opportunistic_fungal_pathogens">
+					https://www.researchgate.net/publication /51671322 Dishwashers-a_man-made_ecolo gical_niche_accommodating_human oppor tunistic_fungal_pathogens</a>
 			</div>
-			<span>Подробнее:</span><a class="block-content-4__second-text" href="https://www.researchgate.net/publication/51671322_Dishwashers-a_man-made_ecological_niche_accommodating_human_opportunistic_fungal_pathogens">
-							https://www.researchgate.net/publication/51671322_Dishwashers-a_man-made_ecological_niche_accommodating_human_opportunistic_fungal_pathogens</a>
 		</div>
 	</div>
 </body>
